tests/tools/turndefs/routeSampler/errors/duplicate_locations/routes.tools
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2025-01-10 12:44:08.417519 by routeSampler.py v1_21_0+1797-4b725da1d37
<configuration>
    <route-files value="input_routes.rou.xml"/>
    <edgedata-files value="input_edgedata.xml"/>
    <edgedata-attribute value="count"/>
</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
<!-- begin="0.0" end="99.0" -->
    <vehicle id="0" depart="0.08">
        <route edges="120 120.180.00 -109 -109.80.00 -11 -11.80.00 3 3.180.00 27 27.80.00 45"/>
    </vehicle>
    <vehicle id="1" depart="0.70">
        <route edges="120 120.180.00 -109 -109.80.00 -11 -11.80.00 3 3.180.00 27 27.80.00 45"/>
    </vehicle>
    <vehicle id="2" depart="2.28">
        <route edges="45 -68 -43 -43.80.00 43"/>
    </vehicle>
    <vehicle id="3" depart="5.58">
        <route edges="45 -68 -43 -43.80.00 -27 -27.80.00 -3 -3.180.00 11 11.80.00 109 109.80.00 123 123.121.42"/>
    </vehicle>
    <vehicle id="4" depart="60.55">
        <route edges="120 120.180.00 -109 -109.80.00 -11 -11.80.00 3 3.180.00 27 27.80.00 45"/>
    </vehicle>
    <vehicle id="5" depart="61.13">
        <route edges="120 120.180.00 -109 -109.80.00 -11 -11.80.00 3 3.180.00 27 27.80.00 45"/>
    </vehicle>
    <vehicle id="6" depart="71.48">
        <route edges="45 -68 -43 -43.80.00 43"/>
    </vehicle>
    <vehicle id="7" depart="92.92">
        <route edges="120 120.180.00 -109 -109.80.00 -11 -11.80.00 3 3.180.00 27 27.80.00 45"/>
    </vehicle>
    <vehicle id="8" depart="98.23">
        <route edges="45 -68 -43 -43.80.00 43"/>
    </vehicle>
</routes>
